fixed pathing issues in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Konrad's Habit Tracker</title> <!--Title of the webpage shown in browser-->
-    <link rel="stylesheet" href="/assets/styles.css"> <!--This Links the external CSS file for personal styling-->
+    <link rel="stylesheet" href="assets/styles.css"> <!--This Links the external CSS file for personal styling-->
     <style>
         /*Internal CSS useful for quick non-global styling tweaks*/
         /* Button Styles changes hover color to red and increase brightness by 20% */
@@ -103,7 +103,7 @@
             <br> Konrad Szulc 2025 Habit Tracker Project 1
         </footer>
     </main>
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
     <!--This Links the external JavaScript file for interactivity, 
         best at the end for html due to numerous benefits like page load speed, 
         better UX, allows HTML elements to be loaded before used by JS -->
