Removed screenshots, updated README and fixed index issue

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <label
                     style="display:inline-flex;align-items:center;gap:8px;background:#eef7ff;color:#046f95;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">
                     Import JSON
-                    <input id="import-json" type="file" accept="application/json" hidden">
+                    <input id="import-json" type="file" accept="application/json" hidden>
                 </label>
                 <button id="reset-all" class="btn"
                     style="background:#c71f23;color:#fff;border:none;padding:10px 14px;border-radius:8px;cursor:pointer;">Reset
